package com.example.testapp;

public class Conversations {
    String convoName;
    String lastconvo;
    public Conversations(String conName,String lastConvo){
        convoName = conName;
        lastconvo = lastConvo;
    }

}
